# Professor

./: .gitignore  Chat.py  README.md  agent.py  create_sample_db.py  db_manager.py  main.py  models.py  professor.py  pyproject.toml  readme.md  requirements.txt  server.py
Agent/: agent.py  dynamic_tools.py  tool_executor.py
MCP/: server.py  tool_executor.py  tool_loader.py
agents/: agent.py  openai_agent.py
alembic/: env.py
alembic/versions/: 342ed722c0d2_create_initial_tables.py  9ee961c70cfd_add_api_method_column_to_tools_table.py
models/: connections.py  llama_model.py  openai_model.py  tools.py
pages/: Settings.py  settings.py
professor/: package.json
professor/agent/: langgraph.json  pyproject.toml
professor/agent/src/: agent.py
professor/agent/src/tools/: DB_tools.py  backend.py
professor/src/app/: layout.tsx  page.tsx
scripts/: init_db.py
services/: __init__.py  agent.py  tool_builder.py
tools/: dynamic_tools.py  general_tool.py  weather_tool.py
